podinfo/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-redirect
spec:
  parentRefs:
    - name: cert-manager-gateway
      namespace: cert-manager
      sectionName: http
  hostnames:
    - test.3756home.org
  rules:
    # - matches:
    #     - path:
    #         type: PathPrefix
    #         value: "/"

    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-https
spec:
  parentRefs:
    - name: cert-manager-gateway
      namespace: cert-manager
      sectionName: test-https
  hostnames:
    - test.3756home.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
    - backendRefs:
        - name: my-release-podinfo
          port: 9898
